--- a/bmc5/docker-compose.yml
+++ b/bmc5/docker-compose.yml
@@ -1,44 +1,25 @@
-version: '3.8'
-
 services:
-  minecraft:
-    image: robaldwin/minecraft-server:bmc5_47_1
-    container_name: minecraft-server-bmc5
-    restart: unless-stopped
-    
-    ports:
-      - "25565:25565"  # Minecraft server port
-    
-    volumes:
-      # Persistent data volumes
-      - ./world:/app/world
-      - ./logs:/app/logs
-      - ./crash-reports:/app/crash-reports
-      
-      # Configuration files
-      - ./server.properties:/app/server.properties
-      - ./ops.json:/app/ops.json
-      - ./whitelist.json:/app/whitelist.json
-      - ./banned-players.json:/app/banned-players.json
-      - ./banned-ips.json:/app/banned-ips.json
-      - ./variables.txt:/app/variables.txt
-      - ./user_jvm_args.txt:/app/user_jvm_args.txt
-      
+  mc:
+    image: itzg/minecraft-server
     environment:
-      # JVM Memory settings (adjust based on your server)
-      MEMORY: "6G"
-      
-      # Game settings (optional - will override server.properties)
-      GAMEMODE: "survival"  # survival, creative, adventure, or spectator
-      MAX_PLAYERS: "20"     # Maximum number of players
-      
-    stdin_open: true
-    tty: true
-    
-    # Resource limits (optional - adjust based on your server)
-    deploy:
-      resources:
-        limits:
-          memory: 6G
-        reservations:
-          memory: 4G
+      EULA: true
+      MODPACK_PLATFORM: AUTO_CURSEFORGE
+      # Allocate API key from https://console.curseforge.com/
+      # and set in .env file making sure to double up dollar signs, such as
+      # CF_API_KEY=$$2a$$10$$....
+      # Refer to https://docker-minecraft-server.readthedocs.io/en/latest/types-and-platforms/mod-platforms/auto-curseforge/#api-key
+      CF_API_KEY: ${CF_API_KEY}
+      CF_PAGE_URL: https://www.curseforge.com/minecraft/modpacks/better-mc-neoforge-bmc5/files/7449464
+     #  CF_SLUG: better-mc-neoforge-bmc5
+     #  CF_FILE_ID: "7449688"
+      DIFFICULTY: normal
+      MODE: survival
+      ENABLE_WHITELIST: true
+      MEMORY: 6G
+    volumes:
+      - mc:/data
+    ports:
+      - "25565:25565"
+
+volumes:
+  mc: {}
